# tools_and_utilities

./: .gitignore  README.md  change_codec.py  create_video_from_frames.py  get_bg_by_mean.py  get_moving_obj.py  hls_nginx_serving.sh  read_stream_and_stream_hls_pyav.py  read_stream_cv2.py  video_to_frames.py
dataset_utils/: pyproject.toml
dataset_utils/coco_ds/annotations/: instances_train.json  instances_val.json
dataset_utils/format_converters/: coco_to_imagenet.py  coco_utils.py  cvat_to_coco.py  cvat_to_imagenet.py  cvat_to_yolo.py  cvat_utils.py  imagenet_to_cvat.py  imagenet_utils.py  images_folder_to_yolo.py  yolo_to_coco.py  yolo_to_cvat.py  yolo_to_imagenet.py  yolo_utils.py
dataset_utils/utils/: bbox_utils.py  imagenet_util.py  merge_imagenet.py
dataset_utils/yolo_ds/: data.yaml
hls_serving_file/: hls.m3u8  hls0.ts
hls_video_player/: index.html
nginx/: nginx.conf
python/common/: s3_util.py  zip_files.py
python/decorators/: _cache.py  _deprecated.py  on_exit_handler.py  retries.py  timeit.py
python/video_utils/: change_codec.py  convert_to_hls_pyav.py  create_video_from_frames.py  get_bg_by_mean.py  get_moving_obj.py  read_stream_cv2.py  read_stream_thread.py  video_to_frames.py
